# NanoBrainSoC

./: .gitignore  README.md
HDL/MemoryController/: NanoBrainSoCMemory.vhd  NanoBrainSoCMemoryController.vhd  NanoBrainSoCMemoryTemplate.vhd
HDL/SoC/: NanoBrainSoC.vhd
Quartus/: NanoBrainSoC.qpf
common/: nbInstructionDecodeTable.h  types.h
nbasm/: .gitignore  AST.cpp  AST.h  Assembly.cpp  Assembly.h  Expression.cpp  Expression.h  Makefile  Statement.cpp  Statement.h  Symbol.h  Test.asm  TestAsm.l  TestAsm.tab.c  TestAsm.tab.h  TestAsm.y  lex.yy.c  nbasm.lex  nbasm.y  types.h
nbcc/: .gitignore  CMakeLists.txt  README.md  codegendefs.h  codegenerator.cpp  codegenerator.h  expression.cpp  expression.h  expressionhelper.cpp  expressionhelper.h  functionstore.cpp  functionstore.h  intrep.cpp  intrep.h  intrepcompiler.cpp  intrepcompiler.h  labelstore.cpp  labelstore.h  main.cpp  nbcc.l  nbcc.y  parsehandlers.cpp  parsehandlers.h  syntax.cpp  syntax.h  syntaxstack.cpp  syntaxstack.h  test.c  types.h  variablestore.cpp  variablestore.h
nbobjdump/: BinFileDisassembler.cpp  BinFileDisassembler.h  Disassembler.cpp  Disassembler.h  Makefile  main.cpp
nbsim/: cpu.cpp  cpu.h  debuggerdialog.cpp  debuggerdialog.h  debuggerdialog.ui  hexdisplaylabel.cpp  hexdisplaylabel.h  iinterruptdelegate.h  intcon.cpp  intcon.h  ioports.cpp  ioports.h  iportsink.h  ledswitch.cpp  ledswitch.h  main.cpp  memory.cpp  memory.h  nbsim.qrc  nbsoc.cpp  nbsoc.h  run.sh  simulatorwindow.cpp  simulatorwindow.h  simulatorwindow.ui  timercounter.cpp  timercounter.h  uart.cpp  uart.h
(+10 files in other folders)
